--- a/site/index.html
+++ b/site/index.html
@@ -2,10 +2,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>index</title>
     <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">
+    <title>index</title>
+    <link rel="stylesheet" type="text/css" media="screen and (min-width: 720px)" href="css/main.css">
+    <link rel="stylesheet" type="text/css" media="screen and (max-width: 720px)" href="css/main-mobile.css">
 </head>
 <body>
-
+<h1>wElCoMe To My TwIsTeD mInD</h1>
+<h2>wElCoMe To My TwIsTeD mInD</h2>
+<h3>wElCoMe To My TwIsTeD mInD</h3>
+<h4>wElCoMe To My TwIsTeD mInD</h4>
+<h5>wElCoMe To My TwIsTeD mInD</h5>
+<h6>wElCoMe To My TwIsTeD mInD</h6>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec interdum libero. Ut sodales commodo enim,
+    sollicitudin ullamcorper diam suscipit et. Aenean ut tincidunt orci, a mollis nisi. Maecenas venenatis massa et
+    rhoncus vulputate. Phasellus et arcu quis turpis rhoncus feugiat ac non felis. Integer lectus velit, laoreet vel
+    vehicula in, sagittis sit amet magna. Quisque ornare dolor velit, eu facilisis quam venenatis sit amet. In arcu
+    nulla, venenatis nec mi pulvinar, mollis ultricies enim. Praesent tempor odio quam, non vulputate neque congue vel.
+    Vivamus non sapien nec eros facilisis tristique ut malesuada neque.
+</p>
+<p>
+    Integer finibus risus ac mauris dapibus ultrices. Suspendisse eget libero eu tellus suscipit dignissim. Fusce dictum
+    ipsum lectus, sed egestas diam vulputate non. Duis finibus pharetra ex nec tincidunt. Phasellus tincidunt semper
+    orci, id molestie enim efficitur at. Aenean eget lacus vitae sem suscipit tempor. Pellentesque egestas sapien vitae
+    nulla luctus tempor. Duis neque eros, luctus nec viverra eget, consequat sed arcu. Aenean eget dolor quis metus
+    gravida luctus eget quis sem. Curabitur quis commodo nisl. In odio massa, mollis suscipit ligula eu, suscipit mattis
+    elit. Fusce pretium ligula ut quam consectetur, quis placerat nulla tincidunt. Vestibulum erat quam, mattis at
+    euismod vel, varius a lorem. Cras pretium, tortor quis vehicula suscipit, lectus massa pretium odio, non scelerisque
+    elit turpis quis elit. Integer eget pharetra risus, ac interdum magna.
+</p>
+<p>
+    Cras aliquet eros eget nunc feugiat, sed sollicitudin lectus luctus. Donec sit amet eros nibh. Cras sollicitudin
+    mattis aliquam. Ut pulvinar euismod sem, id rutrum diam bibendum ac. Sed pretium nec libero vel faucibus. Duis
+    semper suscipit enim, non auctor justo mollis eget. Donec tempor nisi ligula. Aliquam congue sit amet mauris vel
+    pellentesque. Integer faucibus dapibus varius. Quisque lobortis sapien varius, vehicula nulla quis, placerat ante.
+    Nunc molestie lorem sed consectetur blandit. In lacus nunc, dignissim id magna at, accumsan porttitor augue. Fusce
+    ut elit eu arcu malesuada ultrices.
+</p>
+<p>
+    Nulla ex libero, dignissim quis tortor at, egestas finibus ipsum. Quisque consequat, arcu eget mattis gravida, augue
+    nisi iaculis nulla, a porttitor purus nulla ac nulla. Class aptent taciti sociosqu ad litora torquent per conubia
+    nostra, per inceptos himenaeos. Morbi pharetra libero ut nisl rhoncus aliquet. Suspendisse auctor turpis vitae
+    blandit pellentesque. Vestibulum euismod, magna vel feugiat venenatis, orci nibh scelerisque leo, eu faucibus diam
+    nulla a dolor. Duis luctus lobortis bibendum. Vestibulum nec scelerisque libero. Integer sit amet tristique risus.
+    Aliquam pellentesque velit sapien, sit amet faucibus justo blandit vitae. Aenean sed arcu ut est congue venenatis
+    laoreet at ipsum. Curabitur porta, risus convallis vestibulum hendrerit, lacus nisl laoreet nulla, et imperdiet
+    tortor libero ac felis. Sed pharetra gravida est, sit amet venenatis elit. Nullam pulvinar lacinia fringilla.
+</p>
+<p>
+    Nulla cursus arcu sed leo vulputate interdum. Donec id libero nec est viverra ultrices. Ut varius dolor vel quam
+    pulvinar, sed accumsan elit hendrerit. Proin tincidunt justo sit amet quam maximus, nec malesuada enim convallis.
+    Duis tristique porttitor nisl laoreet mattis. Donec nisi urna, faucibus at justo vitae, tempus semper ligula.
+    Vestibulum est mi, sagittis id auctor quis, gravida non risus. Class aptent taciti sociosqu ad litora torquent per
+    conubia nostra, per inceptos himenaeos. Sed fringilla, ante a cursus malesuada, urna augue lobortis enim, sed
+    hendrerit felis erat quis orci. Nullam sit amet erat vel est dignissim consectetur et sit amet felis. Aliquam
+    eleifend, risus non consectetur feugiat, leo nunc egestas mi, ac luctus tellus sem ac libero. Phasellus et commodo
+    metus. Ut non ligula posuere, venenatis magna vitae, pellentesque diam.
+</p>
 </body>
 </html>
